fixed small images on mobile

--- a/src/_includes/components/css/page.css
+++ b/src/_includes/components/css/page.css
@@ -7,8 +7,9 @@ h3 {
   margin-bottom: 3rem;
 }
 main img {
-  width: 50%;
+  width: 100%;
   margin: auto;
+  max-width: 750px;
   display: block;
   border-radius: 8px;
 }
